# glossary

./:  report4oand 3.5-turbo.md  README.md  glossary.json  glossary.md  glossary2.json  pyproject.toml  report-4.o.md  report.md  report4 and 3.5turbo.md  report4oand4o.md  report_original.md  training_data.pkl
src/glossary/: crew.py  main.py
src/glossary/config/: agents.yaml  tasks.yaml
