[tool.poetry]
name = "glossary"
version = "0.1.0"
description = "glossary using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
glossary = "glossary.main:run"
run_crew = "glossary.main:run"
train = "glossary.main:train"
replay = "glossary.main:replay"
test = "glossary.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
